--- a/doc/user-guide.tex
+++ b/doc/user-guide.tex
@@ -181,7 +181,7 @@ openany,     % A chapter may start on either a recto or verso page.
 % Nektar++ version
 \usepackage{xspace}
 \ifdefined\HCode
-\newcommand{\version}{0.5.0\unskip}
+\newcommand{\version}{0.1.0\unskip}
 \else
 \newcommand{\version}{\input{../VERSION.tex}\unskip}
 \fi
@@ -739,7 +739,7 @@ see the next section.
 \section{Run the dwarf}
 TBC
 
- 
+\cite{Eisenstat1983} 
 
 
 
@@ -749,7 +749,7 @@ TBC
 %%% -------------------------------------------------------------
 
 \bibliographystyle{plain}
-%\bibliography{refs}
+\bibliography{refs}
 
 
 \end{document}
