--- a/doc/documentation.tex
+++ b/doc/documentation.tex
@@ -126,7 +126,7 @@ openany,     % A chapter may start on either a recto or verso page.
 \makeevenfoot{memoirStylePages}{}{\bfseries\thepage}{}
 \makeoddfoot{memoirStylePages}{}{\bfseries\thepage}{}
 \makeevenhead{memoirStylePages}{}{\textit{Dwarf 3: Cloud scheme}}{}
-\makeoddhead{memoirStylePages}{}{\textit{Dwarf 3: Cloud schem}}{}
+\makeoddhead{memoirStylePages}{}{\textit{Dwarf 3: Cloud scheme}}{}
 
 \makeatletter
 \makepsmarks{memoirStylePages}{
