--- a/doc/documentation.tex
+++ b/doc/documentation.tex
@@ -524,42 +524,19 @@ pdfauthor={I am the Author}
 
 
 \section{Scope}
-The spectral transform method constitutes one of the core 
-building blocks of many weather \& climate models; for instance, 
-the Integrated Forecast System (IFS) at ECMWF has started using
-it approximately thirty years ago and it is still now the skeleton 
-of the global operational forecast run everyday.
-However, with the increase in resolutuion, spectral transform 
-models are believed to become prohibitively expensive because 
-of the relative increase in computational cost of the Legendre 
-transforms compared to the gridpoint computations \cite{Wedi2013}. 
-
-The overarching scope of this dwarf is to understand if this
-core building block can be effectively ported into the next 
-generation exascale HPC machines, in an heterogeneous computing 
-environment, where the need for extreme parallelism might limit 
-of make it impossible the use of the spectral transform method.
-
+Provide the broad scope of the dwarf and the motivations 
+why we are implementing it.
 
 
 \section{Objectives}
-The main objective of this dwarf is to port the code into 
-GPU/accelerators and try to match or exceed the performance 
-that can be achieved on a CPU.
-In particular, it is important to achieve a time-to-solution
-comparable or better than the current implementation of CPUs 
-while saving energy due to the use of GPUs and accelerators.
-
-The detailed goals are therefore a) measure the time-to-solution
-provided by the different implmentation on the different hardware, 
-b) measure the energy-to-solution and c) find the best compromise 
-that minimise the time-to-solution and maximise the energy-to-solution.
-
+Provide the main objectives we want to achieve.
 
 
 
 \section{Definition of the Dwarf}
-Dwarf 3 implements the cloud microphysics.
+Define and briefly describe the dwarf.
+
+Dwarf 3 implements the cloud microphysics... TBC
 
 
 
