Solved compilation issue.

--- a/doc/documentation.tex
+++ b/doc/documentation.tex
@@ -536,6 +536,8 @@ Provide the main objectives we want to achieve.
 \section{Definition of the Dwarf}
 Define and briefly describe the dwarf.
 
+Citation example: \cite{Eisenstat1983}.
+
 Dwarf 3 implements the cloud microphysics... TBC
 
 
