--- a/doc/refs.bib
+++ b/doc/refs.bib
@@ -1,51 +1,31 @@
-@article{Eisenstat1983,
-  title	   	= {Variational iterative methods for nonsymmetric 
-  systems of linear equations},
-  author   	= {Eisenstat, S.C. and Elman, H.C. and Schultz, M.H.},
-  journal  	= {SIAM Journal on Numerical Analysis},
-  volume   	= {20},
-  number   	= {2},
-  pages    	= {345--357},
-  year     	= {1983},
-  publisher	= {SIAM}
+@article{Forbesetal2011,
+  author    = {Forbes, R.M. and Tompkins, A.M. and Untch, A.},
+  title     = {A new prognostic bulk microphysics scheme for the {IFS}},
+  year      = {2011},
+  journal   = {{ECMWF} Tech. Memo. No.~649},
 }
 
-@article{Smolarkiewicz1994,
-  title   	= {Variational solver for elliptic problems in atmospheric flows},
-  author  	= {Smolarkiewicz, P.K. and Margolin, L.G.},
-  journal 	= {Appl. Math. Comp. Sci},
-  volume  	= {4},
-  number  	=	{4},
-  pages   	= {527--551},
-  year    	= {1994}
+@article{ForbesandTompkins2011,
+  author    = {Forbes, R.M. and Tompkins, A.M.},
+  title     = {An improved representation of cloud and precipitation},
+  year      = {2011},
+  journal   = {{ECMWF} Newsletter No.~129},
+  pages     = {13--18},
 }
 
-@inproceedings{Smolarkiewicz2000,
-  title		= {Variational methods for elliptic problems in fluid models},
-  author	= {Smolarkiewicz, P.K. and Margolin, L.G.},
-  booktitle	= {Proc. ECMWF Workshop on Developments in numerical methods 
-  for very high resolution global models},
-  pages		= {137--159},
-  year		= {2000}
+@article{Tiedtke1993,
+    author  = {Tiedtke, M.},
+    year    = {1993},
+    title   = {Representation of clouds in large-scale models},
+    journal = {Mon. Wea. Rev.},
+    volume  = {121},
+    pages   = {3040--3061},
 }
 
-@article{Thomas2003Spectral,
-  title		= {Spectral preconditioners for nonhydrostatic atmospheric models},
-  author	= {Thomas, S.J. and Hacker, J.P. and Smolarkiewicz, P.K. and 
-  Stull, R.B.},
-  journal	= {Monthly weather review},
-  volume	= {131},
-  number	= {10},
-  pages		= {2464--2478},
-  year		= {2003}
-}
-
-@article{Smolarkiewicz2016,
-  title		= {A finite-volume module for simulating global 
-  all-scale atmospheric flows},
-  author	= {Smolarkiewicz, P.K. and Deconinck, W. and Hamrud, M. and 
-  K{\"u}hnlein, C. and Mozdzynski, G. and Szmelter, J. and Wedi, N.P.},
-  journal	= {Journal of Computational Physics},
-  year		= {2016},
-  publisher	= {Elsevier}
+@article{IFSdoc,
+    author  = {ECMWF},
+    year    = {2015},
+    title   = {{IFS Documentation, Part IV Physical Processes, Chapter 7 Clouds
+    and Large-scale Precipitation}},
+    journal = {ECMWF},
 }
