Re-structured folders and README.

--- a/doc/documentation.tex
+++ b/doc/documentation.tex
@@ -950,7 +950,7 @@ Not supported yet.
 \section{Run the dwarf}
 To run a simple test case you need to link the input file, called \inlsh{cloudsc.bin}, 
 required by this dwarf to the directory from where you intend to run the excutable.
-This is located in the \inlsh{data} subfolder inside the \inlsh{dwarf3-cloudscheme} 
+This is located in the \inlsh{config-files} subfolder inside the \inlsh{dwarf3-cloudscheme} 
 directory and the link can be created as follows
 %
 \begin{lstlisting}[style=BashStyle]
