--- a/doc/documentation.tex
+++ b/doc/documentation.tex
@@ -867,7 +867,7 @@ different ways. The first way is to compile and
 install each dependency and the dwarf separately:
 %
 \begin{lstlisting}[style=BashStyle]
-./escape/bin/escape generate_install dwarf3-cloudscheme
+./escape/bin/escape generate-install dwarf3-cloudscheme
 \end{lstlisting}
 % 
 The command above will generate a script 
